Добавлено: - тестовое подключение к БД. - тестовое определение координат по GPS

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,6 +30,8 @@
     <string name="tv_setting_standart_namecity">Значения по умолчанию:</string>
     <string name="button_ok">ОК</string>
     <string name="settings">settings</string>
+    <string name="Saved">Сохранено</string>
+    <string name="menu_gps">GPS</string>
 
 
 </resources>
